--- a/css/style.css
+++ b/css/style.css
@@ -82,6 +82,14 @@ header .logo span {
     transform: translateY(-50%);
 }
 
+.carousel-caption h3{
+    font-size:50px;
+}
+
+.carousel-caption p{
+    font-size:25px;
+}
+
 .carousel-indicators {
     padding-bottom: 1.5rem;
 }
@@ -92,7 +100,6 @@ header .logo span {
     border-radius: 50%;
     border:none;
     background-color:white;
-    
 }
 
 .carousel-indicators .active {
@@ -206,4 +213,102 @@ header .logo span {
 .feature__content .card p{
     padding-top:30px;
     line-height: 30px;
+}
+
+/* Achievement and award */
+
+#award{
+    padding:70px 0;
+    position:relative;
+}
+
+.award__bg{
+    background-image:url(./../images/memphis_3.png);
+    background-position:bottom left;
+    background-size:50%;
+    background-repeat:no-repeat;
+    position:absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 50%;
+}
+
+.award__left{
+    background:rgb(255 255 255 / 25%);
+    padding:45px;
+    border-radius:10px;
+    border:1px solid rgba(0, 0, 0, 0.064);
+    box-shadow:0 0 30px rgba(0, 0, 0, 0.123);
+    backdrop-filter: blur(3px);
+}
+
+.award__left h3{
+    margin-bottom:1rem;
+    font-size:35px;
+    line-height:50px;
+    font-weight:bold;
+}
+
+.award__left p{
+    color:gray;
+    font-size:15px;
+}
+
+.award__right{
+    padding-top:45px;
+}
+
+
+/* footer */
+
+#footer{
+    background: #222;
+}
+
+.footer__content{
+    padding-top:50px;
+    display:flex;
+    justify-content: center;
+}
+
+.footer__content .footer__icon{
+    margin-right:20px;
+}
+
+.footer__content .footer__icon a i{
+    font-size:25px;
+    color:gray;
+    border:1px solid rgba(128, 128, 128, 0.311);
+    border-radius:50%;
+    height:40px;
+    width:40px;
+    line-height:40px;
+    text-align:center;
+    transition:all 0.5s;
+}
+
+.footer__content .footer__icon:hover a i{
+    color:#35a22c;
+    border:1px solid #35a22c;
+}
+
+.footer__copyright{
+    border-top:1px solid gray;
+    padding:30px 0;
+    margin-top:30px;
+}
+
+.footer__copyright p{
+    color:gray;
+}
+
+.footer__copyright p span a{
+    text-decoration: none;
+    color:gray;
+}
+
+.footer__copyright p span a:hover{
+    color:#35a22c;
 }
